fix: allow overflow in cards (#940)
* Please set animatePanelsOnClick to false to disable animation when Tabs are nested into Card component

--- a/packages/components/src/card/Card.less
+++ b/packages/components/src/card/Card.less
@@ -37,10 +37,4 @@
       outline: none;
     }
   }
-
-  &__content {
-    .media-body {
-      overflow: hidden;
-    }
-  }
 }
